--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -131,6 +131,25 @@
                <label for="end">Ponto de Chegada:</label><br /> 
                <input id="end" style="width: 100%" value="" required /><br />
                <input type="button" id="btSalvar" value="Salvar" />
+
+               <!--p>
+                  <label for="radio">Dia da Semana</label><br/>
+               		<div id="radio">
+                  	<input type="radio" id="radio1" name="radio" /><label for="radio1" style="font-size:10pt; width:50px;">Dom</label>
+                  	<input type="radio" id="radio2" name="radio" /><label for="radio2" style="font-size:10pt; width:50px;">Seg</label>
+                  	<input type="radio" id="radio3" name="radio" /><label for="radio3" style="font-size:10pt; width:50px;">Ter</label>
+                  	<input type="radio" id="radio4" name="radio" /><label for="radio4" style="font-size:10pt; width:50px;">Qua</label>
+                  	<input type="radio" id="radio5" name="radio" /><label for="radio5" style="font-size:10pt; width:50px;">Qui</label>
+                  	<input type="radio" id="radio6" name="radio" /><label for="radio6" style="font-size:10pt; width:50px;">Sex</label>
+                  	<input type="radio" id="radio7" name="radio" /><label for="radio7" style="font-size:10pt; width:50px;">Sáb</label>
+               		</div>
+               </p>
+               
+               <p>
+                  <label>Horário</label><br/>	
+                  <input id="hour" name="hour" value="08:00" style="width: 60px" readonly />
+               </p-->
+               
                <br /><br />
                <table id="table-rotas" class="table table-bordered">
                   <thead>
