--- a/services/src/main/webapp/login.html
+++ b/services/src/main/webapp/login.html
@@ -4,9 +4,34 @@
     <title>Google Maps JavaScript API v3 Example: Map Simple</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
- 	<link rel="stylesheet" type="text/css" href="css/login.css" />
+ 		<link rel="stylesheet" type="text/css" href="css/login.css" />
+    <script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script>
+    	$(function(){
+				$("#login").click(function(){
+					$.ajax({
+						type: "POST",
+						url: "api/auth",
+						data: $("form").serialize(),
+						statusCode: {
+							200: function() {
+						  	alert("login ok");
+						  },
+						  401: function(){
+								alert("não autorizado");
+							}
+						},
+						error: function(e){
+							console.log(e);
+						},
+						success: function(){
+							window.location = "home";
+						}						
+					});
+				});
+      });
+        
       var map;
       function initialize() {
         var mapOptions = {
@@ -30,18 +55,18 @@
   </head>
   <body>
 		<div id="mapa"></div>
-		<form class="form" action="j_security_check" method="POST">
+		<form class="form">
 			<h1><span class="log-in">Log in</span></h1>
 		    <p class="float">
-		        <label for="login"><i class="icon-user"></i>CPF</label>
-		        <input id="login" type="text" name="j_username" placeholder="CPF" maxlength="11">
+		        <label for="username"><i class="icon-user"></i>CPF</label>
+		        <input id="username" type="text" name="username" placeholder="CPF" maxlength="11">
 		    </p>
 		    <p class="float">
 		        <label for="password"><i class="icon-lock"></i>Senha</label>
-		        <input id="password" type="password" name="j_password" placeholder="SENHA" class="showpassword"> 
+		        <input id="password" type="password" name="password" placeholder="SENHA" class="showpassword"> 
 		    </p>
 		    <p class="clearfix"> 
-		        <input type="submit" name="submit" value="Entrar">
+		        <input id="login" type="button" name="submit" value="Entrar">
 		    </p>       
 		</form>
   </body>
