Insere usuário caso ele não exista na hora do login.

--- a/services/src/main/webapp/home.html
+++ b/services/src/main/webapp/home.html
@@ -118,7 +118,7 @@
 							console.log(e);
 						},
 						success: function(){
-							window.location = "login";
+							window.location = "home";
 						}						
 					});
 				});
