Ajustes feitos após correção do módulo de segurança do Demoiselle.

--- a/services/src/main/webapp/login.html
+++ b/services/src/main/webapp/login.html
@@ -23,7 +23,7 @@
 							}
 						},
 						error: function(e){
-							console.log(e);
+							alert("não autorizado");
 						},
 						success: function(){
 							window.location = "home";
