Autenticando no LDAP diretamente e removendo o uso do JAAS

--- a/services/src/main/webapp/home.html
+++ b/services/src/main/webapp/home.html
@@ -26,7 +26,7 @@
 			type: "GET",
 			url: "api/auth",
 			success: function(data){
-				$("#user").text(data.username);
+				$("#user").text(data.displayName);
 			}						
 		});		
 		
