--- a/services/src/main/webapp/home.html
+++ b/services/src/main/webapp/home.html
@@ -14,6 +14,7 @@
 	<script src="js/timespinner.js" type="text/javascript"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places" type="text/javascript"></script>
 	
+	<script src="js/User.js" type="text/javascript"></script>
 	<script src="js/Coord.js" type="text/javascript"></script>
 	<script src="js/Route.js" type="text/javascript"></script>
 	<script src="js/Schedule.js" type="text/javascript"></script>
@@ -79,17 +80,8 @@
 		});
 
 		$("#logout").click(function(){
-			$.ajax({
-				type: "DELETE",
-				url: "api/auth",
-				error: function(e){
-					alert('Erro: Olhe o console');
-					console.log(e);
-				},
-				success: function(){
-					window.location = "home";
-				}						
-			});
+			var user = new User();
+			user._logoff();
 		});		
 	
 		// Componentes dos divs
