--- a/services/src/main/webapp/login.html
+++ b/services/src/main/webapp/login.html
@@ -1,67 +1,54 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>ShareCar</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/login.css" />
-	<script	src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
-</head>
-<body>
-	<div id="map"></div>
-	<form class="form">
-		<h1>
-			<span class="log-in">Log in</span>
-		</h1>
-		<p class="float">
-			<label for="username"><i class="icon-user"></i>CPF</label> <input
-				id="username" type="text" name="username" placeholder="CPF"
-				maxlength="11">
-		</p>
-		<p class="float">
-			<label for="password"><i class="icon-lock"></i>Senha</label> <input
-				id="password" type="password" name="password" placeholder="SENHA"
-				class="showpassword">
-		</p>
-		<p class="clearfix">
-			<input id="login" type="button" name="submit" value="Entrar">
-			<br />
-			<br /> <span id="msg" style="color: red; font-size: 10pt"></span>
-		</p>
-	</form>
-</body>
-<script>
- 	$(function(){
-
-		$.ajaxSetup({
-			statusCode : {
- 				401 : function() {
- 					$("#msg").text("Login e/ou Senha Inválidos.");
- 				},
- 				500 : function() {
- 					$("#msg").text("Falha no processo de autenticação.");
- 				}
- 			}
- 		});
- 	 	
-		// Carrega o mapa centralizado conforme localização do usuário.
-		loadMapCenteredWithUserGeolocation('map', false, true);
-
- 	 	// Envia os dados do formulário de login para o serviço de autenticação.
- 		$("#login").click(function(){
-			$.ajax({
-				type: "POST",
-				url: "api/auth",
-				data: $("form").serialize(),
-				success: function(){
-					window.location = "home";
-				}						
-			});
-		});
+	<head>
+		<title>ShareCar</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/login.css" />
+		<script	src="https://maps.googleapis.com/maps/api/js?sensor=false"></script>
+		<script src="js/jquery-1.9.1.min.js" type="text/javascript"></script>
+		<script src="js/User.js" type="text/javascript"></script>
+		<script src="js/main.js" type="text/javascript"></script>
+	</head>
+	<body>
+		<div id="map"></div>
+		<form class="form">
+			<h1>
+				<span class="log-in">Log in</span>
+			</h1>
+			<p class="float">
+				<label for="username"><i class="icon-user"></i>CPF</label> 
+				<input id="username" type="text" name="username" placeholder="CPF" maxlength="11">
+			</p>
+			<p class="float">
+				<label for="password"><i class="icon-lock"></i>Senha</label> 
+				<input id="password" type="password" name="password" placeholder="SENHA" class="showpassword">
+			</p>
+			<p class="clearfix">
+				<input id="login" type="button" name="submit" value="Entrar">
+				<div id="msg"></div>
+			</p>
+		</form>
+	</body>
+	<script>
+		$(function(){
 		
- 	});
-</script>
+			loadMapCenteredWithUserGeolocation('map', false, true);
 
+			$("#username").focus();
+			
+			$("#login").click(function(){
+		 		var user = new User();
+		 		user._login($("#username").val(), $("#password").val());
+			});
+
+			$(document).keypress(function(e) {
+				  if(e.which == 13) {
+					  var user = new User();
+				 		user._login($("#username").val(), $("#password").val());
+				  }
+			});
+			
+		});
+	</script>
 </html>
